# thingiverse-client

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml  release-please-config.json
.github/workflows/: autoupdate.yaml  ci.yml  docs.yml  pre-commit.yml  publish-pypi.yml  release-please.yml  sync-upstream.yml
docs/: file-uploads.md  gen_ref_pages.py  getting-started.md  index.md  openapi-upstream.md
docs/api/: thingiverse_client.md
openapi/: .gitkeep  bundled.patch  bundled.yaml  generator-config.yaml  openapi.yaml
openapi/resources/: copy.yaml  message.yaml  search.yaml  thing.yaml
scripts/: add_response_descriptions_in_place.py  fetch_openapi_spec.py  generate_client.sh  list_user_designs.py  patch_bundled_spec.py  patch_bundled_spec_full.py
tests/: __init__.py  conftest.py
tests/destructive/: README.md  __init__.py
tests/integration/: __init__.py  test_read_only.py
tests/unit/: __init__.py  test_api_app.py  test_api_banner.py  test_api_category.py  test_api_changelog.py  test_api_collection.py  test_api_comment.py  test_api_deprecated.py  test_api_email.py  test_api_event.py  test_api_file.py  test_api_get_things.py  test_api_group.py  test_api_group_topic.py  test_api_home_banner.py  test_api_make.py  test_api_message.py  test_api_printer.py  test_api_program.py  test_api_search.py  test_api_sitewidenotification.py  test_api_subscription.py  test_api_tag.py  test_api_thing.py  test_api_thing_ops.py  test_api_user.py  test_api_verified.py  test_client_config.py  test_patch_things_thing_id_body.py
thingiverse/: __init__.py  _constants.py
thingiverse/models/: __init__.py  app_schema.py  banner.py  banner_schema.py  category.py  category_schema.py  changelog_schema.py  comment.py  comment_attachments_item.py  comment_schema.py  comment_schema_attachments_item.py  comment_schema_target_type.py  comment_target_type.py  copy_details_parts_item.py  copy_schema_details_parts_item.py  delete_collections_collection_id_response_200.py  delete_collections_collection_id_response_401.py  delete_collections_collection_id_thing_thing_id_response_401.py  delete_collections_collection_id_thing_thing_id_response_404.py  delete_comments_comment_id_response_401.py  delete_comments_comment_id_response_404.py  delete_copies_copy_id_images_image_id_response_200.py  delete_copies_copy_id_likes_response_400.py  (+423 more)
thingiverse_client/: __init__.py  _config.py
(+708 files in other folders)
